# jsonnet-tool

./: Makefile  README.md  default.nix  dot.go  flake.nix  go.mod  go.sum  jsonnet-lint.nix  layers.go  main.go  overlay.nix  shell.nix  symbols.go  traverse.go
internal/go-jsonnet/errors/: BUILD.bazel
internal/go-jsonnet/formatter/: enforce_comment_style.go  enforce_max_blank_lines.go  enforce_string_style.go  expand.go  fix_indentation.go  fix_newlines.go  fix_parens.go  fix_plus_object.go  fix_trailing_commas.go  jsonnetfmt.go  no_redundant_slice_colon.go  pretty_field_names.go  strip.go  unparser.go
internal/go-jsonnet/parser/: BUILD.bazel  lexer.go  parser.go  string_util.go
internal/go-jsonnet/pass/: BUILD.bazel
internal/go-jsonnet/program/: desugarer.go  program.go  static_analyzer.go
internal/parser/: parser.go
