load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pass.go"],
    importpath = "github.com/jdbaldry/jsonnet-tool/internal/go-jsonnet/pass",
    visibility = ["//:__subpackages__"],
    deps = [
        "//ast:go_default_library",
    ],
)
